--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
-Django==3.2.22
+crispy-bootstrap5==0.7
+Django==4.2.6
 django-allauth==0.57.0
+django-crispy-forms==2.1
 django-summernote==0.8.20.0
 oauthlib==3.2.2
 Pillow==10.1.0
