--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ crispy-bootstrap5==0.7
 Django==4.2.6
 django-allauth==0.57.0
 django-crispy-forms==2.1
+django-resized==1.0.2
+django-richtextfield==1.6.1
 django-summernote==0.8.20.0
 oauthlib==3.2.2
 Pillow==10.1.0
 PyJWT==2.8.0
+pylint==3.0.2
 python3-openid==3.2.0
 pytz==2023.3.post1
 requests-oauthlib==1.3.1
